--- a/src/app/components/skills/control-skill/control-skill.component.html
+++ b/src/app/components/skills/control-skill/control-skill.component.html
@@ -9,16 +9,16 @@
         <mat-checkbox [checked]="upgrade.active == true"
                       [indeterminate]="upgrade.active == null"
                       (click)="toggle(skilltree, upgrade, 'active')"
-                      [matTooltip]="upgrade.active == true ? 'Yes' : (upgrade.active == false ? 'No' : 'Don\'t change')"
+                      [matTooltip]="(upgrade.active == true ? 'COMPONENTS__SKILLS__YES' : (upgrade.active == false ? 'COMPONENTS__SKILLS__NO' : 'COMPONENTS__SKILLS__DONT_CHANGE')) | translate"
                       matTooltipPosition="right">
-          Active?
+          {{ 'COMPONENTS__SKILLS__CONTROL__ACTIVE' | translate }}
         </mat-checkbox>
       </mat-card>
     </div>
     <mat-action-row>
       <button mat-raised-button color="primary" (click)="deleteRule(skilltree, upgrade)">
         <mat-icon svgIcon="delete">delete</mat-icon>
-        Delete
+        {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
       </button>
     </mat-action-row>
   </mat-expansion-panel>
