--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -2,13 +2,7 @@
   <sat-popover #damagePopover xAlign="after" yAlign="center" hasBackdrop>
     <mat-card>
       <mat-card-content>
-        <p>The amount of damage the pet will cause with melee attacks.<br>
-          Format: [+-=][number]<br>
-          Examples:<br>
-          +2.5<br>
-          -3<br>
-          =6.0
-        </p>
+        <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__DAMAGE__DAMAGE_POPUP' | translate"></mat-card-content>
       </mat-card-content>
     </mat-card>
   </sat-popover>
@@ -21,9 +15,11 @@
     <div fxLayout="column">
       <mat-card>
         <mat-input-container>
-          <input matInput placeholder="Damage" [value]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
+          <span matPrefix>{{ 'COMPONENTS__SKILLS__DAMAGE__DAMAGE_PREFIX' | translate }}</span>
+          <input matInput [placeholder]="'COMPONENTS__SKILLS__DAMAGE__DAMAGE' | translate"
+                 [value]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value)">
-          <span matSuffix>damage</span>
+          <span matSuffix>{{ 'COMPONENTS__SKILLS__DAMAGE__DAMAGE_SUFFIX' | translate }}</span>
         </mat-input-container>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="damagePopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
@@ -33,7 +29,7 @@
     <mat-action-row>
       <button mat-raised-button color="primary" (click)="deleteRule(skilltree, upgrade)">
         <mat-icon svgIcon="delete">delete</mat-icon>
-        Delete
+        {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
       </button>
     </mat-action-row>
   </mat-expansion-panel>
