--- a/src/app/components/skills/life-skill/life-skill.component.html
+++ b/src/app/components/skills/life-skill/life-skill.component.html
@@ -2,13 +2,7 @@
   <sat-popover #healthPopover xAlign="after" yAlign="center" hasBackdrop>
     <mat-card>
       <mat-card-content>
-        <p>The amount of extra health the pet will get.<br>
-          Format: [+-=][number]<br>
-          Examples:<br>
-          +2<br>
-          -3<br>
-          =6
-        </p>
+        <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__LIFE_HEALTH_POPUP' | translate"></mat-card-content>
       </mat-card-content>
     </mat-card>
   </sat-popover>
@@ -21,10 +15,12 @@
     <div fxLayout="column">
       <mat-card>
         <mat-input-container>
-          <input matInput placeholder="Health" [value]="upgrade.health ? upgrade.health : 0"
+          <span matPrefix>{{ 'COMPONENTS__SKILLS__LIFE_HEALTH_PREFIX' | translate }}</span>
+          <input matInput [placeholder]="'COMPONENTS__SKILLS__LIFE_HEALTH' | translate"
+                 [value]="upgrade.health ? upgrade.health : 0"
                  type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'health', $event.srcElement.value)">
-          <span matSuffix>extra health</span>
+          <span matSuffix>{{ 'COMPONENTS__SKILLS__LIFE_HEALTH_SUFFIX' | translate }}</span>
         </mat-input-container>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="healthPopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
@@ -34,7 +30,7 @@
     <mat-action-row>
       <button mat-raised-button color="primary" (click)="deleteRule(skilltree, upgrade)">
         <mat-icon svgIcon="delete">delete</mat-icon>
-        Delete
+        {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
       </button>
     </mat-action-row>
   </mat-expansion-panel>
