--- a/src/app/components/skilltree-creator/skilltree-creator.component.html
+++ b/src/app/components/skilltree-creator/skilltree-creator.component.html
@@ -20,6 +20,16 @@
             [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__CHANGE_LANGUAGE' | translate">
       <mat-icon svgIcon="translate">translate</mat-icon>
     </button>
+    <button *ngIf="!(premium$ | async)" style="color: red"
+            mat-button (click)="togglePremium()" matTooltipPosition="right"
+            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__PREMIUM_ENABLE' | translate">
+      <mat-icon svgIcon="star">star</mat-icon>
+    </button>
+    <button *ngIf="premium$ | async" style="color: green"
+            mat-button (click)="togglePremium()" matTooltipPosition="right"
+            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__PREMIUM_DISABLE' | translate">
+      <mat-icon svgIcon="star">star</mat-icon>
+    </button>
     <button mat-button routerLink="/about" (click)="closeSidenav()" matTooltipPosition="right"
             [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__ABOUT' | translate">
       <mat-icon svgIcon="info_outline">info_outline</mat-icon>
